proxy baka error

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -109,13 +109,14 @@
                     <td>Otto</td>
                     <td>@mdo</td>
                   </tr>
+               
+                  </tr ng-repeat="x in homes ">
+                            <th scope="row">{{x.id}}</th>
+                            <td>{{x.adresse}}</td>
+                            <td>{{x.nb_pieces}}</td>
+                            <td>{{x.taille}}</td>
                   <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
+                 
                     <th scope="row">3</th>
                     <td>Larry</td>
                     <td>the Bird</td>
