View data in update

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,16 +13,16 @@
         <div class="col">
           1
           <div class="row">
-            1.1
+            Nb personnes : {{persons.length}}
           </div>
           <div class="row">
-              1.2
+
           </div>
         </div>
         <div class="col">
           2
           <div class="row">
-                1.1
+            Nb Home : {{homes.length}}
           </div>
           <div class="row">
                   1.2
@@ -69,7 +69,7 @@
                   <th scope="row">{{person.id}}</th>
                   <td>{{person.name}}</td>
                   <td>{{person.firstname}}</td>
-                  <td>{{person.mail}}</td>
+                  <td>{{person.mail }}</td>
                   <td>
                     <button type="button" class="btn btn-info">Info</button>
                     <button type="button" class="btn btn-danger">Danger</button>
