Mise à jour de la vue principale

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,34 +1,30 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>OPOWER</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 
 <div class="container">
     <div class="row">
         <div class="col">
-          1
           <div class="row">
-            Nb personnes : {{persons.length}}
+            <h4>Nb personnes : {{persons.length}}</h4>
           </div>
           <div class="row">
 
           </div>
         </div>
         <div class="col">
-          2
           <div class="row">
-            Nb Home : {{homes.length}}
+            <h4>Nb Home : {{homes.length}}</h4>
           </div>
           <div class="row">
-                  1.2
+
           </div>
         </div>
-        <div class="col">
+<!--        <div class="col">
           3
           <div class="row">
             3.1
@@ -49,18 +45,18 @@
                   2 of 3 (4)
               </div>
             </div>
-        </div>
+        </div>-->
       </div>
       <div class="row">
           <div class="col">
-           4
+
            <table class="table">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">First</th>
                   <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
+                  <th scope="col">Email</th>
                   <th scope="col"><button type="button" class="btn btn-primary">Ajouter</button></tr>
                 </tr>
               </thead>
