--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,6 +19,11 @@
         <div class="col">
           <div class="row">
             <h4>Nb Home : {{homes.length}}</h4>
+            <!-- modal test  -->
+
+            <a href ng-click="openHomeAddForm(homes.length)" class="button">TEST.</a>
+
+            <!-- modal test  -->
           </div>
           <div class="row">
 
@@ -83,11 +88,7 @@
                     <th scope="col">Adresse</th>
                     <th scope="col">Nb pieces</th>
                     <th scope="col">taille</th>
-                    <th scope="col"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalRegisterForm" >Ajouter</button></tr>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
+                    <th scope="col"><button type="button" class="btn btn-primary"  >Ajouter</button></tr>
                   </tr>
                 </thead>
                 <tbody>
@@ -106,39 +107,4 @@
               </table>
           </div>
       </div>
-
-      <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body mx-3">
-                    <div class="md-form mb-5">
-                        <i class="fa fa-user prefix grey-text"></i>
-                        <input type="text" id="orangeForm-name" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-name">Your name</label>
-                    </div>
-                    <div class="md-form mb-5">
-                        <i class="fa fa-envelope prefix grey-text"></i>
-                        <input type="email" id="orangeForm-email" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
-                    </div>
-
-                    <div class="md-form mb-4">
-                        <i class="fa fa-lock prefix grey-text"></i>
-                        <input type="password" id="orangeForm-pass" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
-                    </div>
-
-                </div>
-                <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-deep-orange">Sign up</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
