Update détails pour les personnes#1

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -73,7 +73,7 @@
                   <td>{{person.firstname}}</td>
                   <td>{{person.mail }}</td>
                   <td>
-                    <a class="btn btn-info" ng-click="goToPerson(person);" href="#">Info</a>
+                      <button ng-click="goToPerson(person);" class="btn btn-info">Info</button>
                     <button type="button" class="btn btn-danger">Danger</button>
                   </td>
                 </tr>
