--- a/app/views/person.html
+++ b/app/views/person.html
@@ -1,7 +1,7 @@
+<h2>{{currPerson.name}} {{currPerson.firstname}}</h2>
 
-  <h2>{{currPerson.name}} {{currPerson.firstname}}</h2>
-
-  <div class="container">
+<div class="container">
+  <div class="row">
     <div class="col-lg-3">
       <h3>Amis</h3>
     </div>
@@ -14,3 +14,4 @@
       <h3>Equipements électroniques</h3>
     </div>
   </div>
+</div>
