--- a/app/views/person.html
+++ b/app/views/person.html
@@ -1,21 +1,19 @@
-<a href="#!main"><h4>Accueil</h4></a>
+<a href="#!main"><h5>Accueil</h5></a>
 
-<h2>{{currPerson.name}} {{currPerson.firstname}}</h2>
+<h1>{{currPerson.name}} {{currPerson.firstname}}</h1>
 
-<div class="">
   <div class="row ">
-    <div class="col-lg-12 jumbotron">
+    <div class="col-lg-12">
       <h3>Résidences</h3>
-      <div class="col ">
         <table class="table">
           <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Adresse</th>
-            <th scope="col">Nb pieces</th>
+            <th scope="col">Nb pièces</th>
             <th scope="col">taille</th>
             <th scope="col">
-              <button type="button" class="btn btn-primary">Ajouter</button>
+              <!--<button type="button" class="btn btn-primary">Ajouter</button>-->
           </tr>
           </tr>
           </thead>
@@ -28,15 +26,14 @@
             <td>{{home.taille}}</td>
             <td>
               <button type="button" ng-click="goToHome(home)" class="btn btn-info">Info</button>
-              <button type="button" class="btn btn-danger">Supprimer</button>
+              <!--<button type="button" class="btn btn-danger">Supprimer</button>-->
             </td>
           </tr>
           </tbody>
         </table>
-      </div>
     </div>
 
-    <div class="col-lg-12 jumbotron">
+    <div class="col-lg-12 ">
       <h3>Phones</h3>
       <table class="table">
         <thead class="thead-dark">
@@ -56,7 +53,5 @@
         </tr>
         </tbody>
       </table>
-
     </div>
   </div>
-</div>
